# rust_game_engine

./: Cargo.toml  build.ps1
content/: fragment_shader.glsl  vertex_shader.glsl
lib/: engine.rs  game.rs  graphics.rs  io.rs  lib.rs  material.rs  math.rs  matrix.rs  mesh.rs  parser.rs  shapes.rs  vector.rs  vertex.rs
lib/game/: mod.rs
lib/graphics/: material.rs  mesh.rs  mod.rs  shapes.rs  vertex.rs
lib/math/: constants.rs  matrix.rs  mod.rs  vector.rs
lib/parser/: obj.rs  obj_2.rs
src/: Game.rs  io.rs  main.rs  sandbox.rs
src/graphics/: mod.rs  shader.rs  shapes.rs  textures.rs
src/lib/: lib.rs
src/lib/graphics/: mod.rs  shader.rs  textures.rs
src/math/: matrix.rs  mod.rs
