[package]
name = "rust_game_engine"
version = "0.1.0"
authors = ["Andrew Goacher <andrewgoacher@outlook.com>"]
include = ["src/content/**/*"]
description = "A playground for me to learn some OpenGL and Rust"
repository = "https://github.com/andrewgoacher/rust_game_engine"

[dependencies]
glium = "*"
image = "*"
