[package]
name = "rust_game_engine"
version = "0.1.0"
authors = ["Andrew Goacher <andrewgoacher@outlook.com>"]
include = ["src/content/**/*"]
description = "A playground for me to learn some OpenGL and Rust"
repository = "https://github.com/andrewgoacher/rust_game_engine"

[dependencies]
glium = "*"
image = "*"
regex = "1.1.0"
clap = "^2"

[lib]
name = "rust_game_engine"
path = "lib/lib.rs"

[[bin]]
name = "rust_game"
path = "src/main.rs"
